--- a/src/CardComp.css
+++ b/src/CardComp.css
@@ -1,38 +1,90 @@
-.App {
-    text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+
+.CardComp {
+    display: flex;
+
+    width: 600px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
+img {
+    max-width: 50%;
+    max-height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.productInfo {
+    background-color: hsl(0, 0%, 100%);
+    padding: 35px;
+    justify-content: space-between;
     display: flex;
     flex-direction: column;
+}
+
+.productType {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+}
+
+.productName {
+    font-family: "Fraunces";
+    font-size: 32px;
+}
+
+.desc {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+    line-height: 160%;
+}
+
+.prices {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
     align-items: center;
+}
+
+.productPrice {
+    font-family: Fraunces;
+    font-size: 30px;
+    color: hsl(158, 36%, 37%);
+    padding-right: 20px;
+}
+
+.originalPrice {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+    text-decoration: line-through;
+}
+
+.addToCartButton {
+    color: hsl(0, 0%, 100%);
+    font-family: Montserrat;
+    font-size: 14px;
+    background-color: hsl(158, 36%, 37%);
+    padding: 15px;
+    border-radius: 7px;
+
+    display: flex;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    align-items: center;
+
+    margin-top: 5px;
 }
 
-.App-link {
-    color: #61dafb;
+.addToCartButton:hover {
+    background-color: hsl(158, 36%, 17%);
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.addToCartButton img {
+    padding-right: 10px;
 }
