--- a/src/CardComp.css
+++ b/src/CardComp.css
@@ -2,8 +2,9 @@
 
 .CardComp {
     display: flex;
+    flex-direction: column;
+    width: 345px;
 
-    width: 600px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -15,55 +16,8 @@
 }
 
 img {
-    max-width: 50%;
+    max-width: 100%;
     max-height: 100%;
-}
-
-.productInfo {
-    background-color: hsl(0, 0%, 100%);
-    padding: 35px;
-    justify-content: space-between;
-    display: flex;
-    flex-direction: column;
-}
-
-.productType {
-    font-family: Montserrat;
-    font-size: 14px;
-    color: hsl(228, 12%, 48%);
-}
-
-.productName {
-    font-family: "Fraunces";
-    font-size: 32px;
-}
-
-.desc {
-    font-family: Montserrat;
-    font-size: 14px;
-    color: hsl(228, 12%, 48%);
-    line-height: 160%;
-}
-
-.prices {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-}
-
-.productPrice {
-    font-family: Fraunces;
-    font-size: 30px;
-    color: hsl(158, 36%, 37%);
-    padding-right: 20px;
-}
-
-.originalPrice {
-    font-family: Montserrat;
-    font-size: 14px;
-    color: hsl(228, 12%, 48%);
-    text-decoration: line-through;
 }
 
 .addToCartButton {
@@ -81,10 +35,77 @@ img {
     margin-top: 5px;
 }
 
+.productType {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+    padding-bottom: 5px;
+}
+
+.productName {
+    font-family: "Fraunces";
+    font-size: 32px;
+}
+
+.productInfo {
+    background-color: hsl(0, 0%, 100%);
+    padding: 20px;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+}
+
+.desc {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+    line-height: 160%;
+}
+
+.prices {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+.productPrice {
+    font-family: Fraunces;
+    font-size: 30px;
+    color: hsl(158, 36%, 37%);
+    padding-right: 20px;
+}
+
+.originalPrice {
+    font-family: Montserrat;
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+    text-decoration: line-through;
+}
+
 .addToCartButton:hover {
     background-color: hsl(158, 36%, 17%);
 }
 
 .addToCartButton img {
     padding-right: 10px;
+}
+
+@media only screen and (min-width: 375px) {
+    /*These apply to desktop widths*/
+    .CardComp {
+        flex-direction: row;
+        width: 600px;
+    }
+
+    img {
+        max-width: 50%;
+        max-height: 100%;
+    }
+
+    .productInfo {
+        padding: 35px;
+    }
 }
